# dropdir

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
src/: fs_ops.rs  main.rs  routes.rs  text_ext.rs
src/assets/: index.html
