[package]
name = "dropdir"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "signal"] }
tower-http = { version = "0.5", features = ["limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
getrandom = "0.2"
if-addrs = "0.13"

[profile.release]
lto = true
strip = true
